# gomoku-terminator

./: .dockerignore  .gitignore  Dockerfile  EXTREME_RUN.md  QUICKSTART.md  README.md  ROBUST_RUN.md  main.py  pyproject.toml  requirements.txt
data/: README.md  opening_book.json
data/game_logs/example/: game.json
data/game_logs/example-ai-ai-free/: game.json
data/game_logs/example-ai-ai-renju/: game.json
data/game_logs/example-human-ai-free/: game.json
data/game_logs/extreme-1/: game.json
data/game_logs/extreme-2/: game.json
docs/: BACKENDS.md  PRD.md  QUICKSTART.md  README.md
scripts/: benchmark_engine.py  build_opening_book.py  download_opening_sources.py  profile_search.py
src/gomoku_terminator/: cli.py  game_session.py
src/gomoku_terminator/board/: bitboard.py  coordinates.py  zobrist.py
src/gomoku_terminator/engine/: benchmark.py  evaluator.py  move_ordering.py  negamax.py  numba_bitboard_search.py  numba_search.py  parallel_search.py  tactics.py  time_control.py  transposition_table.py
src/gomoku_terminator/logging/: game_log.py  replay_loader.py
src/gomoku_terminator/opening/: book.py  symmetry.py
src/gomoku_terminator/rules/: renju_forbidden.py  (+1 more)
tests/: test_ai_worker.py  test_benchmark.py  test_bitboard.py  test_cli.py  test_coordinates.py  test_engine.py  test_evaluator.py  test_forbidden.py  test_forbidden_overlay.py  test_game_log.py  test_game_session.py  test_move_ordering.py  test_numba_bitboard_search.py  test_numba_search.py  test_opening_book.py  test_symmetry.py  test_tactics.py  test_ui_stats.py  test_win_check.py
(+7 files in other folders)
