[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gomoku-terminator"
version = "0.1.0"
description = "CPU-only high-performance Gomoku/Renju engine."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "numba>=0.59",
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
